gke_gateway/fe-srv.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-srv
  labels:
    type: fe-srv
  annotations:
    cloud.google.com/app-protocols: '{"fe":"HTTP2"}'
    cloud.google.com/backend-config: '{"default": "fe-grpc-backendconfig"}'
spec:
  type: ClusterIP 
  ports:
  - name: fe
    port: 50051
    protocol: TCP
    targetPort: 50051
    appProtocol: HTTP2
  selector:
    app: fe
