gke_gateway/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: default
  labels:
    app: fe-route  
spec:
  parentRefs:
  - kind: Gateway
    name: gke-l7-gxlb-gw
  - kind: Gateway
    name: gke-l7-rilb-gw
  hostnames:
  - grpc.domain.com
  rules:
  - backendRefs:
    - name: fe-srv
      port: 50051
